# AdaptiveTimeSteppingSEAS

./: .gitignore  README.md
TUM_Thesis/: main.tex
TUM_Thesis/chapters/: Appendix.tex  (+8 more)
document/: Appendix.aux  Extensions.aux  Extensions.tex  FirstExperiments.aux  FirstExperiments.tex  FourFormulationsForSEAS.aux  FourFormulationsForSEAS.tex  Introduction.aux  Introduction.tex  Results.aux  Results.tex  TwoDimensionalSEASProblem.aux  TwoDimensionalSEASProblem.tex  literature.bib  main.aux  main.bbl  main.blg  main.out  main.tex  main.toc
presentation/: Anfang.tex  Praeambel.tex  Praeambel4zu3.tex  PraesentationBeispiele.tex  _Einstellungen.tex  _Liesmich.txt  literature.bib  main.aux  main.nav  main.snm  main.tex
rate_and_state/: CMakeLists.txt  Problem.h  Zero.cpp  code.m  convergence.r  main.cpp  main_im.cpp  math_functions.h  packages_install.r  plot.r  sample.cpp  test.sh
rate_and_state/.clangd/index/: Problem.h.CD85ADE94234E940.idx  Zero.h.330B25313458B948.idx  main.cpp.68BEA6C1161FCAF1.idx
rate_and_state/.ipynb_checkpoints/: AnalysisErrorEstimate-checkpoint.ipynb  analysisParametersPIController-checkpoint.ipynb
rate_and_state/notes/: plotF.r  rs.aux  rs.fdb_latexmk  rs.fls  rs.tex  rs_new.aux  rs_new.fdb_latexmk  rs_new.fls  rs_new.tex
rate_and_state/scriptsResults/: AnalysisErrorEstimate.ipynb  AnalysisTimeEvolution.ipynb  analysisParametersPIController.ipynb  scriptAnalysisErrorEstimateAndTimeEvolution.sh  scriptAnalysisPIParameters.sh
tandem/: CMakeLists.txt  Free_particle.ipynb
tandem/submodules/mneme/: .travis.yml  CMakeLists.txt  LICENSE
tandem/submodules/mneme/include/mneme/: allocators.hpp  displacements.hpp  iterator.hpp  plan.hpp  span.hpp  storage.hpp  tagged_tuple.hpp  util.hpp  view.hpp
tandem/submodules/mneme/test/: allocators.cpp  displacements.cpp  mneme.cpp
(+261 files in other folders)
